--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
 .App {
-  text-align: center;
+  border:2px solid rgb(140, 37, 37);
+  padding:5px;
+  margin:5px
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App1{
+  margin:3px;
+  padding:3px;
+  background-color: rgb(46, 177, 46);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App2{
+  margin:3px;
+  padding:3px;
+  background-color: rgb(213, 57, 57);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input{
+  margin:2px;
+  padding:2px;
 }
